[package]
name = "env_logger_demo"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6.0"
user_auth = {path = "../user_auth"}
log = { version = "0.4.6", features = ["release_max_level_error", "max_level_trace"] }